--- a/TodoApp/templates/UpdateItem.html
+++ b/TodoApp/templates/UpdateItem.html
@@ -12,10 +12,10 @@
 <body>
     <div id = 'container'>
         <div>
-        <h1><img style="border-radius: 7%;border: 1px solid white;" width=290px, height=500px, src="https://i.postimg.cc/9M4jqxyS/jpg.jpg"  alt="no image found" ></h1>
+        <h1><img style="border-radius: 7%;border: 1px solid white;" width=290px, height=470px, src="https://i.postimg.cc/9M4jqxyS/jpg.jpg"  alt="no image found" ></h1>
         </div>
 
-        <h1 style="color: purple; text-align: center;"><b>Edit Todo List</b></h1>
+        <h1 style="color: green; text-align: center;"><b>Edit Todo List  <img width="40", height="40", src="https://i.postimg.cc/2jxrLnXQ/icons8-sun-with-face-96.png" id="icon"></b></h1>
 
         <div id = 'formContainer'>
             <form method="POST">
@@ -30,13 +30,20 @@
 
 
         
-    <script>
-        function addDarkmodeWidget() {
-          new Darkmode().showWidget();
-        }
-        window.addEventListener('load', addDarkmodeWidget);
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+   <script>
 
+    var icon = document.getElementById("icon");
+
+    icon.onclick = function(){
+        document.body.classList.toggle("dark-theme");
+        if(document.body.classList.contains("dark-theme")){
+            icon.src = "https://i.postimg.cc/fy6G0FXL/moon-6695-1.png";
+        }else{
+            icon.src = "https://i.postimg.cc/2jxrLnXQ/icons8-sun-with-face-96.png";
+        }
+    }
+
+
+</script>
 </body>
 </html>
