--- a/TodoApp/templates/alltodo.html
+++ b/TodoApp/templates/alltodo.html
@@ -11,7 +11,8 @@
 <body>
     <div id = 'container'>
         <p><img style="border-radius: 8%;border: 1px solid black;" width=280px, height=160px, src="https://i.postimg.cc/Cxbpd1fk/todo.jpg"  alt="no image found" ></p>
-        <h1 style="color: black; text-align: center;"><b>Todo List</b></h1>
+    <h1 style="color: green; text-align: center;"><b>Todo List <img width="40", height="40", src="https://i.postimg.cc/2jxrLnXQ/icons8-sun-with-face-96.png" id="icon">
+  </b></h1>
 
         <div id = 'formContainer'>
             <form method="POST">
@@ -34,19 +35,26 @@
             {% endfor %}
 
 
-            <script>
-                function addDarkmodeWidget() {
-                  new Darkmode().showWidget();
-                }
-                window.addEventListener('load', addDarkmodeWidget);
-              </script>
         
 
         </div>
     </div>
 
-   
-    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
-   </body>
+   <script>
+
+    var icon = document.getElementById("icon");
+
+    icon.onclick = function(){
+        document.body.classList.toggle("dark-theme");
+        if(document.body.classList.contains("dark-theme")){
+            icon.src = "https://i.postimg.cc/fy6G0FXL/moon-6695-1.png";
+        }else{
+            icon.src = "https://i.postimg.cc/2jxrLnXQ/icons8-sun-with-face-96.png";
+        }
+    }
+
+
+</script>
+</body>
 </html>
     
